--- a/app/src/main/res/drawable/button_style_red.xml
+++ b/app/src/main/res/drawable/button_style_red.xml
@@ -8,7 +8,7 @@
                 android:bottomRightRadius="5dp"
                 android:topLeftRadius="5dp"
                 android:topRightRadius="5dp" />
-            <gradient android:angle="270" android:startColor="#006699" android:endColor="#006699" android:type="linear" />
+            <gradient android:angle="270" android:startColor="@color/theme_color" android:endColor="@color/theme_color" android:type="linear" />
         </shape>
         <color android:color="#FFFFFF" />
     </item>
