--- a/app/src/main/res/layout/devicesetting.xml
+++ b/app/src/main/res/layout/devicesetting.xml
@@ -13,21 +13,31 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Device Setting"
-            android:textColor="#006699"
-            android:textSize="20sp" />
+            android:textSize="20sp" android:textColor="#ffffff" />
 
     </LinearLayout>
     <View android:layout_height="1dip" android:layout_width="fill_parent" android:background="#CCCCCC" />
     <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:orientation="horizontal" style="@style/rowStyle0" android:background="#F3F3F3">
+        <TextView android:text="Country" android:layout_width="140sp" android:layout_height="wrap_content" android:textSize="20sp" />
+        <Spinner android:id="@+id/spnCountry" android:drawSelectorOnTop="true" android:layout_width="300sp" android:layout_height="wrap_content" android:layout_weight="0" android:prompt="@string/planet_prompt" android:textSize="20sp" />
+    </LinearLayout>
+    <View android:layout_height="1dip" android:layout_width="fill_parent" android:background="#CCCCCC" />
+    <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:orientation="horizontal" style="@style/rowStyle0" android:background="#F3F3F3">
+        <TextView android:text="Facility" android:layout_width="140sp" android:layout_height="wrap_content" android:textSize="20sp" />
+        <Spinner android:id="@+id/spnFacility" android:drawSelectorOnTop="true" android:layout_width="300sp" android:layout_height="wrap_content" android:layout_weight="0" android:prompt="@string/planet_prompt" android:textSize="20sp" />
+    </LinearLayout>
+    <View android:layout_height="1dip" android:layout_width="fill_parent" android:background="#CCCCCC" />
+
+
+    <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:orientation="horizontal" style="@style/rowStyle0" android:background="#F3F3F3">
         <TextView android:text="Device ID" android:layout_width="140sp" android:layout_height="wrap_content" android:textSize="20sp" />
         <Spinner android:id="@+id/spnUser" android:drawSelectorOnTop="true" android:layout_width="300sp" android:layout_height="wrap_content" android:layout_weight="0" android:prompt="@string/planet_prompt" android:textSize="20sp" />
     </LinearLayout>
-
     <View android:layout_height="1dip" android:layout_width="fill_parent" android:background="#CCCCCC" />
 
     <LinearLayout android:layout_width="fill_parent" android:paddingTop="60sp" android:layout_height="wrap_content" android:orientation="horizontal" style="@style/rowStyle0" android:background="#F3F3F3">
        	<Button android:id="@+id/cmdSave" android:layout_width="fill_parent" android:layout_height="wrap_content"
-       			android:textSize="20sp" android:text=" Done "  android:layout_marginBottom="10sp" android:background="@drawable/button_style"/>
+       			android:textSize="20sp" android:text=" Done "  android:layout_marginBottom="10sp" android:background="@drawable/button_style_green" android:textColor="#ffffff"/>
     </LinearLayout>
 
 </LinearLayout>
