--- a/app/src/main/res/layout/form_heading.xml
+++ b/app/src/main/res/layout/form_heading.xml
@@ -4,7 +4,7 @@
     android:layout_height="fill_parent"
     android:isScrollContainer="true"
     android:orientation="vertical"
-    android:overScrollMode="always"
+    android:overScrollMode="always" android:layout_marginTop="30sp"
     android:scrollbarAlwaysDrawVerticalTrack="true"
     android:scrollbarStyle="outsideInset"
     android:scrollbars="vertical">
@@ -24,7 +24,6 @@
             android:paddingRight="10px"
             android:scaleType="center"
             android:src="@drawable/logo"
-            android:text="@string/app_name"
             android:textColor="#FFFFFF"
             android:textSize="30sp" />
     </LinearLayout>
@@ -35,17 +34,32 @@
         android:layout_gravity="center"
         android:layout_marginBottom="10sp"
         android:layout_marginTop="5sp"
-        android:visibility="visible">
+        android:visibility="visible" android:orientation="vertical">
 
-        <TextView
+        <TextView android:id="@+id/lblTitle"
             android:layout_width="fill_parent"
             android:layout_height="45sp"
             android:gravity="center"
             android:paddingLeft="10px"
             android:paddingRight="10px"
             android:text="@string/app_name"
-            android:textColor="#000000"
+            android:textColor="@color/heading_font_color"
             android:textSize="30sp" />
-
+        <TextView android:id="@+id/Facility"
+            android:layout_width="fill_parent"
+            android:layout_height="45sp"
+            android:gravity="center"
+            android:paddingLeft="10px"
+            android:paddingRight="10px"
+            android:textColor="@color/heading_font_color"
+            android:textSize="25sp" />
+        <TextView android:id="@+id/Country"
+            android:layout_width="fill_parent"
+            android:layout_height="45sp"
+            android:gravity="center"
+            android:paddingLeft="10px"
+            android:paddingRight="10px"
+            android:textColor="@color/heading_font_color"
+            android:textSize="25sp" />
     </LinearLayout>
 </LinearLayout>
