--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,6 +4,7 @@
     <color name="default_color">#ffffff</color>
     <color name="questionHeader">#0097a7</color>
     <color name="Heading">@color/theme_color</color>
+
     <color name="pageHeading">#FFFFFF</color>
 
     <!-- Navigation Bar
@@ -21,8 +22,30 @@
     Marune: #FFC4005F
     Blue  : #006699
     Green : #69CB3F
+    Yellow: #FAAC58
     -->
-    <color name="pageHeadingBack">#FFC4005F</color>
-    <color name="theme_color">#FFC4005F</color>
+    <color name="pageHeadingBack">#473A89</color>
+    <color name="pageHeading_font_Color">#FFFFFF</color>
+
+    <color name="heading_back_color">#473A89</color>
+    <color name="heading_font_color">#FFFFFF</color>
+
+    <color name="theme_color">#473A89</color>
     <color name="save_button_color">#69CB3F</color>
+
+
+
+    <color name="colorPrimary">#db4437</color>
+    <color name="colorPrimaryDark">#b93221</color>
+    <color name="colorAccent">#FFFFFF</color>
+    <color name="from">#000000</color>
+    <color name="subject">#111111</color>
+    <color name="timestamp">#4285f4</color>
+    <color name="message">#7a7a7a</color>
+    <color name="icon_tint_normal">#7a7a7a</color>
+    <color name="icon_tint_selected">#fed776</color>
+    <color name="row_activated">#e0e0e0</color>
+    <color name="bg_action_mode">#757575</color>
+    <color name="bg_circle_default">#666666</color>
+
 </resources>
