--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -12,4 +12,18 @@
     <!--Button Style -->
     <dimen name="button_radius">25dp</dimen>
     <dimen name="button_line_width">2dp</dimen>
+
+
+    <dimen name="padding_list_row">5dp</dimen>
+    <dimen name="textsize_list_row">18dp</dimen>
+    <dimen name="messages_padding_left">72dp</dimen>
+    <dimen name="icon_width_height">40dp</dimen>
+    <dimen name="msg_text_primary">16sp</dimen>
+    <dimen name="msg_text_secondary">14sp</dimen>
+    <dimen name="icon_star">25dp</dimen>
+    <dimen name="icon_text">22dp</dimen>
+    <dimen name="timestamp">12dp</dimen>
+
+    <!--Heading Height -->
+    <dimen name="heading_height">55dp</dimen>
 </resources>
