--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -91,8 +91,8 @@
         <item name="android:layout_marginTop">10sp</item>
         <item name="android:paddingTop">5sp</item>
         <item name="android:paddingBottom">5sp</item>
-        <item name="android:background">@color/theme_color</item>
-        <item name="android:textColor">@color/Heading</item>
+        <item name="android:background">@color/heading_back_color</item>
+        <item name="android:textColor">@color/heading_font_color</item>
         <item name="android:paddingRight">10sp</item>
         <item name="android:paddingLeft">10sp</item>
     </style>
@@ -160,6 +160,8 @@
 
     <style name="CustomTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
+    <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
+    <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
     <!-- Button Style -->
     
