--- a/app/src/main/res/layout/kmcpreobs.xml
+++ b/app/src/main/res/layout/kmcpreobs.xml
@@ -37,7 +37,7 @@
     <View android:id="@+id/lineadwghedkmc" android:layout_height="1dip" android:layout_width="fill_parent" android:background="#CCCCCC" />
     <LinearLayout android:id="@+id/secadwghtkmc" android:layout_width="fill_parent" android:layout_height="wrap_content" android:orientation="horizontal" style="@style/rowStyle0">
         <TextView android:id="@+id/lbladwghtkmc" android:text="24." android:layout_width="40sp" android:layout_height="wrap_content" android:textSize="20sp" />
-        <TextView android:id="@+id/Vlbladwghtkmc" android:text="Baby’s weight at admission" android:layout_width="300sp" android:layout_height="wrap_content" android:textSize="20sp" />
+        <TextView android:id="@+id/Vlbladwghtkmc" android:text="Baby’s weight at admission (gram)" android:layout_width="300sp" android:layout_height="wrap_content" android:textSize="20sp" />
          <EditText android:id="@+id/txtadwghtkmc" android:maxLength="4" android:layout_width="100sp" android:inputType="number" android:layout_height="wrap_content" style="@style/customEdit" android:layout_marginRight="10sp" android:textSize="20sp" />
     </LinearLayout>
     <View android:id="@+id/lineadwghtkmc" android:layout_height="1dip" android:layout_width="fill_parent" android:background="#CCCCCC" />
