--- a/app/src/main/res/layout/observation.xml
+++ b/app/src/main/res/layout/observation.xml
@@ -5,6 +5,22 @@
         <TextView android:id="@+id/lblHeading" android:text="Registration" android:paddingLeft="10sp" android:layout_width="wrap_content" android:layout_height="match_parent" android:gravity="center_vertical" android:textSize="20sp" android:textColor="@color/pageHeading"/>
         <TextView android:id="@+id/lblCountPatient" android:text="(Total: 0)" android:textColor="#ffffff" android:paddingLeft="10sp" android:layout_width="wrap_content" android:layout_height="match_parent" android:gravity="center_vertical" android:textSize="20sp"/>
         <ImageButton android:id="@+id/cmdSearch" android:visibility="gone" android:background="@color/pageHeadingBack" android:layout_alignParentRight="true" android:src="@drawable/ic_search_white_24dp" android:layout_width="50sp" android:layout_height="match_parent"/>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:clickable="true"
+            android:orientation="horizontal"
+            android:paddingLeft="72dp" android:layout_alignParentRight="true"
+            android:paddingRight="@dimen/padding_list_row">
+            <Button android:id="@+id/cmdObj" android:enabled="false" android:layout_width="80sp" android:layout_height="30sp" android:layout_marginTop="2sp" android:background="@drawable/button_style_red"
+                android:textSize="20sp" android:text="OB" android:textColor="#FFFFFF" />
+            <Button android:id="@+id/cmdRS" android:enabled="false" android:layout_width="80sp" android:layout_height="30sp" android:layout_marginTop="2sp" android:layout_marginLeft="5sp" android:background="@drawable/button_style_red"
+                android:textSize="20sp" android:text="MRS" android:textColor="#FFFFFF"/>
+            <Button android:id="@+id/cmdDE" android:enabled="false" android:layout_width="80sp" android:layout_height="30sp" android:layout_marginTop="2sp" android:layout_marginLeft="5sp" android:background="@drawable/button_style_red"
+                android:textSize="20sp" android:text="DE" android:textColor="#FFFFFF"/>
+
+        </LinearLayout>
     </LinearLayout>
     <View android:layout_height="1dip" android:layout_width="fill_parent" android:layout_marginBottom="0sp" android:background="#CCCCCC" />
 
@@ -144,12 +160,14 @@
                 android:layout_width="80sp"
                 android:layout_height="wrap_content" android:textSize="@dimen/textsize_list_row"
                 android:textColor="@color/timestamp"/>
+<!--
             <Button android:id="@+id/cmdObj" android:layout_width="80sp" android:layout_height="30sp" android:background="@drawable/button_style_red"
                 android:textSize="20sp" android:text="OB" android:textColor="#FFFFFF" />
             <Button android:id="@+id/cmdRS" android:layout_width="80sp" android:layout_height="30sp" android:layout_marginTop="2sp" android:background="@drawable/button_style_red"
                 android:textSize="20sp" android:text="MRS" android:textColor="#FFFFFF"/>
             <Button android:id="@+id/cmdDE" android:layout_width="80sp" android:layout_height="30sp" android:layout_marginTop="2sp" android:background="@drawable/button_style_red"
                 android:textSize="20sp" android:text="DE" android:textColor="#FFFFFF"/>
+-->
 
         </LinearLayout>
 
