--- a/app/src/main/res/layout/observation_grid_item.xml
+++ b/app/src/main/res/layout/observation_grid_item.xml
@@ -21,13 +21,13 @@
         android:layout_height="wrap_content"
         android:textSize="16dp"/>
 	<Spinner android:id="@+id/spnDataList" android:paddingLeft="5dp"
-		android:layout_width="match_parent"
+		android:layout_width="match_parent" android:textSize="16sp"
 		android:layout_height="wrap_content"/>
 
 	<LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content" android:orientation="horizontal" android:layout_gravity="center_vertical|center_horizontal">
 		<EditText android:id="@+id/txtData" android:paddingLeft="5dp" android:paddingRight="5dp" android:inputType="number"
 			android:layout_width="70dp"
-			android:layout_height="35sp" />
+			android:layout_height="40sp" android:textSize="18sp" android:gravity="center"/>
 		<ImageButton android:id="@+id/btnData" android:layout_marginLeft="10sp" android:src="@drawable/ic_action_save"
 			android:layout_width="wrap_content"
 			android:layout_height="35sp" android:background="#FFFFFF" />
