--- a/app/src/main/res/layout/observation_time.xml
+++ b/app/src/main/res/layout/observation_time.xml
@@ -6,11 +6,11 @@
     <View android:layout_height="1dip" android:layout_width="fill_parent" android:layout_marginBottom="0sp" android:background="#CCCCCC" />
     <LinearLayout android:layout_width="fill_parent" android:background="#D7D7D7" android:paddingBottom="5sp" android:paddingTop="5sp" android:layout_height="wrap_content" android:orientation="horizontal" >
         <TextView android:text="   " android:background="#FFFFFF" android:layout_marginLeft="20sp" android:paddingLeft="10sp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:gravity="left" android:textSize="20sp"/>
-        <TextView android:text="Not Observe"  android:paddingLeft="10sp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:gravity="left" android:textSize="20sp"/>
+        <TextView android:text="Not Observed"  android:paddingLeft="10sp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:gravity="left" android:textSize="18sp"/>
         <TextView android:text="   " android:background="#69CB3F" android:layout_marginLeft="10sp" android:paddingLeft="10sp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:gravity="left" android:textSize="20sp"/>
-        <TextView android:text="Observed"  android:paddingLeft="10sp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:gravity="left" android:textSize="20sp"/>
+        <TextView android:text="Observed"  android:paddingLeft="10sp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:gravity="left" android:textSize="18sp"/>
         <TextView android:text="   " android:background="#FAAC58" android:layout_marginLeft="10sp" android:paddingLeft="10sp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:gravity="left" android:textSize="20sp"/>
-        <TextView android:text="Don't Know"  android:paddingLeft="10sp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:gravity="left" android:textSize="20sp"/>
+        <TextView android:text="Don't Know"  android:paddingLeft="10sp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:gravity="left" android:textSize="18sp"/>
     </LinearLayout>
 
     <LinearLayout
