--- a/app/src/main/res/layout/observation_time.xml
+++ b/app/src/main/res/layout/observation_time.xml
@@ -13,6 +13,12 @@
         <TextView android:text="Don't Know"  android:paddingLeft="10sp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:gravity="left" android:textSize="18sp"/>
     </LinearLayout>
 
+
+    <View android:layout_height="1dip" android:layout_width="fill_parent" android:layout_marginBottom="0sp" android:background="#CCCCCC" />
+    <LinearLayout android:id="@+id/secChildSl" android:layout_width="fill_parent" android:background="#D7D7D7" android:paddingLeft="20sp" android:paddingBottom="5sp" android:paddingTop="5sp" android:layout_height="wrap_content" android:orientation="horizontal" >
+        <TextView android:id="@+id/lbl1" android:text="Child Serial  " android:layout_width="wrap_content" android:layout_height="wrap_content" android:textSize="20sp" />
+        <Spinner android:id="@+id/spnChildSl" android:drawSelectorOnTop="true" android:layout_width="100sp" android:layout_height="wrap_content" android:layout_weight="0" android:prompt="@string/planet_prompt" android:textSize="20sp" />
+    </LinearLayout>
     <LinearLayout
         android:id="@+id/linearLayout_gridtableLayout"
         android:layout_width="fill_parent"
