--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -32,6 +32,7 @@
 
     <color name="theme_color">#473A89</color>
     <color name="save_button_color">#69CB3F</color>
+    <color name="headingColor">#006699</color>
 
 
 
