--- a/app/src/main/res/drawable/button_style_yellow.xml
+++ b/app/src/main/res/drawable/button_style_yellow.xml
@@ -4,10 +4,10 @@
     <item android:state_pressed="true">
         <shape android:shape="rectangle">
             <corners 
-                android:bottomLeftRadius="5dp"
-                android:bottomRightRadius="5dp"
-                android:topLeftRadius="5dp"
-                android:topRightRadius="5dp" />
+                android:bottomLeftRadius="@dimen/button_radius"
+                android:bottomRightRadius="@dimen/button_radius"
+                android:topLeftRadius="@dimen/button_radius"
+                android:topRightRadius="@dimen/button_radius" />
             <gradient android:angle="270" android:startColor="@color/theme_color" android:endColor="@color/theme_color" android:type="linear" />
         </shape>
         <color android:color="#FFFFFF" />
@@ -15,11 +15,12 @@
     <item>
         <shape android:shape="rectangle">
             <corners 
-                android:bottomLeftRadius="5dp"
-                android:bottomRightRadius="5dp"
-                android:topLeftRadius="5dp"
-                android:topRightRadius="5dp" />
+                android:bottomLeftRadius="@dimen/button_radius"
+                android:bottomRightRadius="@dimen/button_radius"
+                android:topLeftRadius="@dimen/button_radius"
+                android:topRightRadius="@dimen/button_radius" />
             <gradient android:angle="270" android:startColor="#FAAC58" android:endColor="#FAAC58" android:type="linear" />
+            <stroke android:color="#69CB3F" android:width="@dimen/button_line_width"/>
         </shape>
     </item>
 </selector>
