--- a/app/src/main/res/layout/devicesetting.xml
+++ b/app/src/main/res/layout/devicesetting.xml
@@ -1,44 +1,54 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-<ScrollView android:background="#F3F3F3" xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="fill_parent" android:layout_height="fill_parent" android:overScrollMode="always" android:isScrollContainer="true" android:scrollbarAlwaysDrawVerticalTrack="true"         android:scrollbarStyle="outsideInset"         android:scrollbars="vertical"><LinearLayout android:orientation="vertical" android:layout_width="fill_parent"    android:layout_marginLeft="10sp" android:layout_marginRight="10sp"    android:layout_height="wrap_content" android:scrollbars="vertical">
-    <include
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent" android:background="@drawable/seven">
+    <include android:visibility="invisible"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         layout="@layout/form_heading" />
-    <View android:layout_height="2dip" android:layout_width="fill_parent" android:background="#D7D7D7" />
-    <LinearLayout android:id="@+id/seclblListing" android:layout_width="fill_parent" android:layout_height="wrap_content" android:orientation="horizontal" style="@style/rowHeading">
-
+    <View android:layout_height="0dip" android:layout_width="fill_parent" android:background="#D7D7D7" />
+    <LinearLayout android:id="@+id/seclblListing" android:layout_marginTop="170sp" android:layout_width="fill_parent" android:layout_height="wrap_content" android:orientation="horizontal">
         <TextView
             android:id="@+id/lblHlblListing"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Device Setting"
+            android:text="Device Setting" android:gravity="center"
             android:textSize="20sp" android:textColor="#ffffff" />
 
     </LinearLayout>
-    <View android:layout_height="1dip" android:layout_width="fill_parent" android:background="#CCCCCC" />
-    <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:orientation="horizontal" style="@style/rowStyle0" android:background="#F3F3F3">
+    <View android:layout_height="1dip" android:layout_marginLeft="20sp" android:layout_marginTop="10sp" android:layout_marginRight="20sp" android:layout_width="fill_parent" android:background="#CCCCCC" />
+    <LinearLayout android:layout_marginLeft="20sp" android:layout_marginRight="20sp" android:layout_width="fill_parent" android:layout_height="wrap_content" android:orientation="horizontal" style="@style/rowStyle0">
         <TextView android:text="Country" android:layout_width="140sp" android:layout_height="wrap_content" android:textSize="20sp" />
         <Spinner android:id="@+id/spnCountry" android:drawSelectorOnTop="true" android:layout_width="300sp" android:layout_height="wrap_content" android:layout_weight="0" android:prompt="@string/planet_prompt" android:textSize="20sp" />
     </LinearLayout>
-    <View android:layout_height="1dip" android:layout_width="fill_parent" android:background="#CCCCCC" />
-    <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:orientation="horizontal" style="@style/rowStyle0" android:background="#F3F3F3">
+    <View android:layout_height="1dip" android:layout_marginLeft="20sp" android:layout_marginRight="20sp" android:layout_width="fill_parent" android:background="#CCCCCC" />
+    <LinearLayout android:layout_marginLeft="20sp" android:layout_marginRight="20sp" android:layout_width="fill_parent" android:layout_height="wrap_content" android:orientation="horizontal" style="@style/rowStyle0">
         <TextView android:text="Facility" android:layout_width="140sp" android:layout_height="wrap_content" android:textSize="20sp" />
         <Spinner android:id="@+id/spnFacility" android:drawSelectorOnTop="true" android:layout_width="300sp" android:layout_height="wrap_content" android:layout_weight="0" android:prompt="@string/planet_prompt" android:textSize="20sp" />
     </LinearLayout>
-    <View android:layout_height="1dip" android:layout_width="fill_parent" android:background="#CCCCCC" />
+    <View android:layout_height="1dip" android:layout_marginLeft="20sp" android:layout_marginRight="20sp" android:layout_width="fill_parent" android:background="#CCCCCC" />
 
 
-    <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:orientation="horizontal" style="@style/rowStyle0" android:background="#F3F3F3">
+    <LinearLayout android:layout_marginLeft="20sp" android:layout_marginRight="20sp" android:layout_width="fill_parent" android:layout_height="wrap_content" android:orientation="horizontal" style="@style/rowStyle0">
         <TextView android:text="Device ID" android:layout_width="140sp" android:layout_height="wrap_content" android:textSize="20sp" />
         <Spinner android:id="@+id/spnUser" android:drawSelectorOnTop="true" android:layout_width="300sp" android:layout_height="wrap_content" android:layout_weight="0" android:prompt="@string/planet_prompt" android:textSize="20sp" />
     </LinearLayout>
-    <View android:layout_height="1dip" android:layout_width="fill_parent" android:background="#CCCCCC" />
+    <View android:layout_height="1dip" android:layout_marginLeft="20sp" android:layout_marginRight="20sp" android:layout_width="fill_parent" android:background="#CCCCCC" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" android:gravity="left|bottom" >
+        <TextView android:background="#FAAC58" android:gravity="center_horizontal|center_vertical"
+            android:id="@+id/lblProjectTitle" android:text=""
+            android:layout_width="match_parent" android:textSize="25sp"
+            android:layout_height="wrap_content" android:textColor="@color/heading_font_color"/>
 
-    <LinearLayout android:layout_width="fill_parent" android:paddingTop="60sp" android:layout_height="wrap_content" android:orientation="horizontal" style="@style/rowStyle0" android:background="#F3F3F3">
+    </LinearLayout>
+    <LinearLayout android:layout_width="fill_parent" android:paddingTop="40sp" android:layout_height="wrap_content" android:orientation="horizontal"
+        android:layout_marginLeft="20sp" android:layout_marginRight="20sp">
        	<Button android:id="@+id/cmdSave" android:layout_width="fill_parent" android:layout_height="wrap_content"
        			android:textSize="20sp" android:text=" Done "  android:layout_marginBottom="10sp" android:background="@drawable/button_style_green" android:textColor="#ffffff"/>
     </LinearLayout>
 
 </LinearLayout>
-</ScrollView>
