--- a/app/src/main/res/layout/login.xml
+++ b/app/src/main/res/layout/login.xml
@@ -3,24 +3,15 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:scrollbars="vertical" android:background="@color/theme_color">
-    <include
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        layout="@layout/form_heading" />
+    android:layout_height="fill_parent" android:background="@drawable/seven">
 
 
-
-    <LinearLayout android:layout_marginLeft="50sp" android:layout_marginRight="50sp" android:layout_marginTop="20sp" android:layout_marginBottom="0sp" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_gravity="center"></LinearLayout>
-
-    <LinearLayout android:layout_marginLeft="50sp" android:layout_marginRight="50sp" android:layout_marginTop="30sp" android:layout_marginBottom="20sp" android:layout_width="fill_parent"  android:layout_height="wrap_content" android:layout_gravity="center">
+    <LinearLayout android:layout_marginLeft="50sp" android:layout_marginRight="50sp" android:layout_marginTop="410sp" android:layout_marginBottom="20sp" android:layout_width="fill_parent"  android:layout_height="wrap_content" android:layout_gravity="center">
         <EditText android:id="@+id/userid"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" android:inputType="text"
             android:paddingTop="8sp" android:paddingBottom="8sp" android:paddingLeft="20sp"
             android:singleLine="true" android:hint="User ID" android:background="#FFFFFF"/>
-
     </LinearLayout>
 
     <LinearLayout android:layout_marginLeft="50sp" android:layout_marginRight="50sp" android:layout_marginTop="0sp" android:layout_marginBottom="20sp" android:layout_width="fill_parent"  android:layout_height="wrap_content" android:layout_gravity="center">
@@ -50,23 +41,46 @@
 
 
     </LinearLayout>
-    <LinearLayout android:layout_width="fill_parent" android:layout_marginTop="10sp" android:layout_height="wrap_content" android:orientation="horizontal" android:background="@color/pageHeadingBack">
+
+    <LinearLayout android:layout_width="fill_parent" android:layout_marginTop="10sp" android:layout_height="wrap_content" android:orientation="vertical">
+        <TextView android:id="@+id/Facility"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:paddingLeft="10px"
+            android:paddingRight="10px"
+            android:textColor="@color/heading_font_color"
+            android:textSize="20sp" />
+        <TextView android:id="@+id/Country" android:visibility="visible"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:paddingLeft="10px"
+            android:paddingRight="10px"
+            android:textColor="@color/heading_font_color"
+            android:textSize="20sp" />
         <TextView
             android:id="@+id/lblSystemDate"
             android:layout_height="30sp"
             android:layout_width="fill_parent"
             android:gravity="center"
             android:text="09 Jul 2014"
-            android:textColor="@color/pageHeading"
-            android:textSize="20sp" />
-    </LinearLayout>
-
-    <LinearLayout android:layout_marginLeft="50sp" android:layout_marginRight="50sp" android:layout_marginTop="0sp" android:layout_marginBottom="20sp" android:layout_width="fill_parent"  android:layout_height="wrap_content" android:layout_gravity="center">
+            android:textColor="@color/heading_font_color"
+            android:textSize="16sp" />
         <TextView
             android:id="@+id/UniqueUserId"
-            android:layout_width="match_parent"
+            android:layout_width="match_parent" android:textSize="16sp"
             android:layout_height="wrap_content" android:gravity="center_horizontal|center_vertical" android:textColor="@color/heading_font_color"/>
-
     </LinearLayout>
 
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" android:gravity="left|bottom" android:layout_marginTop="-20dp">
+        <TextView android:background="#FAAC58" android:gravity="center_horizontal|center_vertical"
+            android:id="@+id/lblProjectTitle" android:text="QA/Supervisor Interview"
+            android:layout_width="200sp" android:textSize="25sp"
+            android:layout_height="wrap_content" android:textColor="@color/heading_font_color"/>
+
+    </LinearLayout>
 </LinearLayout>
