--- a/app/src/main/res/layout/menu_content_main.xml
+++ b/app/src/main/res/layout/menu_content_main.xml
@@ -10,8 +10,10 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="org.icddrb.enap.MainActivity1"
-    tools:showIn="@layout/app_bar_main">
+    tools:context="org.icddrb.enap.MainActivity">
+
+
+    <!--tools:showIn="@layout/app_bar_main"-->
         <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:orientation="vertical" android:paddingTop="20sp">
             <LinearLayout
                 android:layout_width="fill_parent"
@@ -83,22 +85,11 @@
                     android:layout_marginRight="20sp"
                     android:background="@drawable/button_style_gray"
                     android:gravity="center|center_vertical"
-                    android:text="Labour and Delivery Data Extraction"
+                    android:text="Data Extraction"
                     android:textColor="#FFFFFF"
                     android:textSize="20sp" />
 
-                <Button
-                    android:id="@+id/cmdKMCDataExt"
-                    style="@style/menuButtonStyle"
-                    android:layout_width="fill_parent"
-                    android:layout_marginBottom="5sp"
-                    android:layout_marginLeft="20sp"
-                    android:layout_marginRight="20sp"
-                    android:background="@drawable/button_style_gray"
-                    android:gravity="center|center_vertical"
-                    android:text="KMC Data Extraction"
-                    android:textColor="#FFFFFF"
-                    android:textSize="20sp" />
+
 
 
                 <Button
@@ -153,7 +144,7 @@
                     android:layout_marginLeft="20sp"
                     android:layout_marginRight="20sp"
                     android:layout_marginTop="20sp"
-                    android:background="@drawable/button_style_sky"
+                    android:background="@drawable/button_style_green"
                     android:gravity="center|center_vertical"
                     android:text="Data Sync"
                     android:textColor="#ffffff"
