--- a/app/src/main/res/layout/observation.xml
+++ b/app/src/main/res/layout/observation.xml
@@ -2,8 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical" android:layout_width="fill_parent"  android:layout_height="wrap_content" android:scrollbars="vertical">
     <LinearLayout android:layout_width="fill_parent" android:layout_height="45sp" android:orientation="horizontal" android:background="@color/pageHeadingBack">
         <ImageButton android:id="@+id/cmdBack" android:background="@color/pageHeadingBack" android:src="@drawable/back" android:layout_width="50sp" android:layout_height="match_parent"/>
-        <TextView android:id="@+id/lblHeading" android:text="Registration" android:paddingLeft="10sp" android:layout_width="wrap_content" android:layout_height="match_parent" android:gravity="center_vertical" android:textSize="20sp" android:textColor="@color/pageHeading"/>
-        <TextView android:id="@+id/lblCountPatient" android:text="(Total: 0)" android:textColor="#ffffff" android:paddingLeft="10sp" android:layout_width="wrap_content" android:layout_height="match_parent" android:gravity="center_vertical" android:textSize="20sp"/>
+        <TextView android:id="@+id/lblHeading" android:text="Observation" android:paddingLeft="10sp" android:layout_width="wrap_content" android:layout_height="match_parent" android:gravity="center_vertical" android:textSize="20sp" android:textColor="@color/pageHeading"/>
+        <TextView android:id="@+id/lblCountPatient" android:text="" android:textColor="#ffffff" android:paddingLeft="10sp" android:layout_width="wrap_content" android:layout_height="match_parent" android:gravity="center_vertical" android:textSize="20sp"/>
         <ImageButton android:id="@+id/cmdSearch" android:visibility="gone" android:background="@color/pageHeadingBack" android:layout_alignParentRight="true" android:src="@drawable/ic_search_white_24dp" android:layout_width="50sp" android:layout_height="match_parent"/>
 
         <LinearLayout
@@ -36,7 +36,7 @@
         android:paddingTop="@dimen/padding_list_row" android:layout_rowWeight="4">
         <LinearLayout android:layout_marginLeft="0sp"
             android:id="@+id/message_container12"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:clickable="true"
             android:orientation="horizontal"
@@ -49,14 +49,18 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:clickable="true"
-            android:orientation="horizontal"
+            android:orientation="vertical"
             android:paddingLeft="0dp"
             android:paddingRight="@dimen/padding_list_row">
+            <TextView android:id="@+id/lblOutcodeStatus" android:text=""  android:paddingLeft="0sp" android:layout_width="wrap_content" android:layout_height="match_parent" android:gravity="right" android:textSize="18sp"
+                android:background="#FAAC58" android:textColor="#000000"/>
+
             <Button android:textSize="20sp"
                 android:id="@+id/cmdPatientList" android:drawableRight="@drawable/patient32"
-                android:layout_width="120sp"
+                android:layout_width="140sp"
                 android:layout_height="40sp" android:background="@drawable/button_style_yellow"
-                android:text="Patient" />
+                android:text="  Patient" />
+
         </LinearLayout>
     </RelativeLayout>
 
@@ -170,11 +174,32 @@
 -->
 
         </LinearLayout>
-
+        <LinearLayout android:layout_marginLeft="0sp" android:layout_alignParentRight="true"
+            android:id="@+id/message_container132"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:clickable="true"
+            android:orientation="vertical"
+            android:paddingLeft="0dp"
+            android:paddingRight="@dimen/padding_list_row">
+            <Button android:textSize="20sp"
+                android:id="@+id/cmdPause"
+                android:layout_width="140sp"
+                android:layout_height="40sp" android:background="@drawable/button_style_line_green"
+                android:text="Pause" />
+            <Button android:textSize="20sp" android:layout_marginTop="10sp"
+                android:id="@+id/cmdStop"
+                android:layout_width="140sp"
+                android:layout_height="40sp" android:background="@drawable/button_style_line_green"
+                android:text="Stop" />
+        </LinearLayout>
     </RelativeLayout>
 
     <View android:layout_height="0dip" android:layout_width="fill_parent" android:layout_marginBottom="5sp" android:background="#CCCCCC" />
-
+    <TextView android:id="@+id/lblPauseMessage" android:visibility="gone" android:text="Continue Observation: Press Resume Button" android:gravity="center"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" android:textSize="25sp"
+        android:textColor="#FF0000"/>
 
     <LinearLayout android:id="@+id/secTab" android:paddingTop="10sp" android:layout_width="fill_parent" android:layout_height="fill_parent" android:orientation="vertical">
         <TabHost
