--- a/app/src/main/res/layout/observation_time.xml
+++ b/app/src/main/res/layout/observation_time.xml
@@ -6,18 +6,23 @@
     <View android:layout_height="1dip" android:layout_width="fill_parent" android:layout_marginBottom="0sp" android:background="#CCCCCC" />
     <LinearLayout android:layout_width="fill_parent" android:background="#D7D7D7" android:paddingBottom="5sp" android:paddingTop="5sp" android:layout_height="wrap_content" android:orientation="horizontal" >
         <TextView android:text="   " android:background="#FFFFFF" android:layout_marginLeft="20sp" android:paddingLeft="10sp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:gravity="left" android:textSize="20sp"/>
-        <TextView android:text="Not Observed"  android:paddingLeft="10sp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:gravity="left" android:textSize="18sp"/>
-        <TextView android:text="   " android:background="#69CB3F" android:layout_marginLeft="10sp" android:paddingLeft="10sp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:gravity="left" android:textSize="20sp"/>
-        <TextView android:text="Observed"  android:paddingLeft="10sp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:gravity="left" android:textSize="18sp"/>
-        <TextView android:text="   " android:background="#FAAC58" android:layout_marginLeft="10sp" android:paddingLeft="10sp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:gravity="left" android:textSize="20sp"/>
         <TextView android:text="Don't Know"  android:paddingLeft="10sp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:gravity="left" android:textSize="18sp"/>
+        <TextView android:text="   " android:background="#69CB3F" android:layout_marginLeft="10sp" android:paddingLeft="10sp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:gravity="left" android:textSize="20sp"/>
+        <TextView android:text="Observed-Done"  android:paddingLeft="10sp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:gravity="left" android:textSize="18sp"/>
+        <TextView android:text="   " android:background="#FF0000" android:layout_marginLeft="10sp" android:paddingLeft="10sp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:gravity="left" android:textSize="20sp"/>
+        <TextView android:text="Observed-Not Done"  android:paddingLeft="10sp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:gravity="left" android:textSize="18sp"/>
     </LinearLayout>
 
 
     <View android:layout_height="1dip" android:layout_width="fill_parent" android:layout_marginBottom="0sp" android:background="#CCCCCC" />
-    <LinearLayout android:id="@+id/secChildSl" android:layout_width="fill_parent" android:background="#D7D7D7" android:paddingLeft="20sp" android:paddingBottom="5sp" android:paddingTop="5sp" android:layout_height="wrap_content" android:orientation="horizontal" >
+    <LinearLayout android:id="@+id/secChildSl" android:layout_width="fill_parent" android:background="#FFFFFF" android:paddingLeft="20sp" android:paddingBottom="5sp" android:paddingTop="5sp" android:layout_height="wrap_content" android:orientation="horizontal" >
         <TextView android:id="@+id/lbl1" android:text="Child Serial  " android:layout_width="wrap_content" android:layout_height="wrap_content" android:textSize="20sp" />
-        <Spinner android:id="@+id/spnChildSl" android:drawSelectorOnTop="true" android:layout_width="100sp" android:layout_height="wrap_content" android:layout_weight="0" android:prompt="@string/planet_prompt" android:textSize="20sp" />
+        <Spinner android:id="@+id/spnChildSl" android:visibility="gone" android:drawSelectorOnTop="true" android:layout_width="100sp" android:layout_height="wrap_content" android:layout_weight="0" android:prompt="@string/planet_prompt" android:textSize="20sp" />
+        <RadioGroup android:id="@+id/rdogrpChildSl" android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:textSize="20sp">
+            <RadioButton android:layout_height="wrap_content" android:checked="true" android:layout_width="wrap_content" android:paddingRight="10dp" android:textSize="20sp" android:id="@+id/rdoChildSl1" android:text="One" android:gravity="top|bottom" />
+            <RadioButton android:layout_height="wrap_content" android:layout_width="wrap_content" android:paddingRight="10dp" android:textSize="20sp" android:id="@+id/rdoChildSl2" android:text="Two" android:gravity="top|bottom" />
+            <RadioButton android:layout_height="wrap_content" android:layout_width="wrap_content" android:paddingRight="10dp" android:textSize="20sp" android:id="@+id/rdoChildSl3" android:text="Three" android:gravity="top|bottom"/>
+        </RadioGroup>
     </LinearLayout>
     <LinearLayout
         android:id="@+id/linearLayout_gridtableLayout"
