--- a/app/src/main/res/layout/patient_list_content.xml
+++ b/app/src/main/res/layout/patient_list_content.xml
@@ -1,10 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical" android:layout_width="fill_parent"  android:layout_height="wrap_content" android:scrollbars="vertical">
-    <LinearLayout android:layout_width="fill_parent" android:layout_height="@dimen/heading_height" android:orientation="horizontal" android:background="@color/pageHeadingBack">
+    <LinearLayout android:layout_width="fill_parent" android:layout_height="45sp" android:orientation="horizontal" android:background="@color/pageHeadingBack">
         <ImageButton android:id="@+id/cmdBack" android:background="@color/pageHeadingBack" android:src="@drawable/back" android:layout_width="50sp" android:layout_height="match_parent"/>
         <TextView android:id="@+id/lblHeading" android:text="Registration" android:paddingLeft="10sp" android:layout_width="wrap_content" android:layout_height="match_parent" android:gravity="center_vertical" android:textSize="20sp" android:textColor="@color/pageHeading"/>
         <TextView android:id="@+id/lblCountPatient" android:text="(Total: 0)" android:textColor="#ffffff" android:paddingLeft="10sp" android:layout_width="wrap_content" android:layout_height="match_parent" android:gravity="center_vertical" android:textSize="20sp"/>
-        <ImageButton android:id="@+id/cmdSearch" android:visibility="gone" android:background="@color/pageHeadingBack" android:layout_alignParentRight="true" android:src="@drawable/ic_search_white_24dp" android:layout_width="50sp" android:layout_height="match_parent"/>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:clickable="true"
+            android:orientation="horizontal"
+            android:paddingLeft="100dp" android:layout_alignParentRight="true"
+            android:paddingRight="@dimen/padding_list_row">
+            <Button android:id="@+id/cmdSyncData" android:visibility="visible" android:layout_width="wrap_content" android:layout_height="30sp" android:layout_marginTop="2sp" android:background="@drawable/button_style_sky"
+                android:textSize="20sp" android:text="  Refresh  " android:textColor="#FFFFFF" />
+            <Button android:id="@+id/cmdAssign" android:visibility="visible" android:layout_width="wrap_content" android:layout_height="30sp" android:layout_marginTop="2sp" android:background="@drawable/button_style_sky"
+                android:textSize="20sp" android:layout_marginLeft="10sp" android:text="  Assign  " android:textColor="#FFFFFF" />
+        </LinearLayout>
     </LinearLayout>
     <View android:layout_height="1dip" android:layout_width="fill_parent" android:layout_marginBottom="0sp" android:background="#CCCCCC" />
     <LinearLayout android:id="@+id/secRegisType" android:layout_width="fill_parent" android:weightSum="4" android:paddingTop="10sp" android:layout_height="wrap_content" android:orientation="horizontal" android:background="#978AD9">
@@ -13,7 +25,7 @@
         <Button android:id="@+id/cmdKMC" android:layout_width="100sp" android:layout_weight="1" android:layout_height="60sp" android:background="@drawable/button_style_line_green"
             android:textSize="20sp" android:text="KMC" android:textColor="#006699" android:layout_marginBottom="10sp" android:layout_marginLeft="0sp" android:layout_marginRight="5sp"/>
         <Button android:id="@+id/cmdSepsis" android:layout_width="100sp" android:layout_weight="1" android:layout_height="60sp" android:background="@drawable/button_style_line_green"
-            android:textSize="20sp" android:text="INFXN" android:textColor="#006699" android:layout_marginBottom="10sp" android:layout_marginLeft="0sp" android:layout_marginRight="5sp"/>
+            android:textSize="20sp" android:text="Infection" android:textColor="#006699" android:layout_marginBottom="10sp" android:layout_marginLeft="0sp" android:layout_marginRight="5sp"/>
 
     </LinearLayout>
     <LinearLayout android:id="@+id/secTitle" android:background="#978AD9" android:layout_width="fill_parent" android:paddingTop="5sp" android:layout_height="45sp" android:orientation="horizontal">
@@ -39,8 +51,8 @@
             android:layout_height="wrap_content" android:layout_gravity="center_vertical"
             android:id="@+id/dateSearch" android:src="@drawable/plus" android:background="#D7D7D7" />
 
-        <Button android:id="@+id/btnSearch" android:layout_marginLeft="20sp" android:layout_marginRight="10sp"  android:textSize="18sp" android:textColor="#FFFFFF"
-            android:background="@drawable/button_style_blue" android:layout_gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="40sp" android:layout_marginTop="0dip" android:layout_marginBottom="0sp" android:text=" Search "
+        <Button android:id="@+id/btnSearch" android:layout_marginLeft="20sp" android:layout_marginRight="10sp"  android:textSize="16sp" android:textColor="#FFFFFF"
+            android:background="@drawable/button_style_blue" android:layout_gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="40sp" android:layout_marginTop="0dip" android:layout_marginBottom="0sp" android:text=" Search/Refresh "
             android:paddingLeft="5sp" android:paddingRight="5sp"/>
 
     </LinearLayout>
