--- a/app/src/main/res/layout/patient_list_row1.xml
+++ b/app/src/main/res/layout/patient_list_row1.xml
@@ -92,7 +92,13 @@
             android:ellipsize="end"
             android:lines="2" android:textSize="@dimen/textsize_list_row"
             android:textColor="@color/message"/>
-
+        <TextView android:layout_marginTop="5sp"
+            android:id="@+id/txtRegDate"
+            android:layout_width="300sp"
+            android:layout_height="wrap_content"
+            android:ellipsize="end"
+            android:lines="1" android:textSize="@dimen/textsize_list_row"
+            android:textColor="#006699"/>
     </LinearLayout>
 
     <LinearLayout
@@ -113,7 +119,10 @@
             android:textSize="20sp" android:text="MRS" android:textColor="#FFFFFF"/>
         <Button android:id="@+id/cmdDE" android:layout_width="80sp" android:layout_height="30sp" android:layout_marginTop="2sp" android:background="@drawable/button_style_red"
             android:textSize="20sp" android:text="DE" android:textColor="#FFFFFF"/>
-
+        <Button android:id="@+id/cmdVER" android:layout_width="80sp" android:layout_height="30sp" android:layout_marginTop="2sp" android:background="@drawable/button_style_red"
+            android:textSize="20sp" android:text="VER" android:textColor="#FFFFFF"/>
+        <Button android:id="@+id/cmdACS" android:layout_width="80sp" android:layout_height="30sp" android:layout_marginTop="2sp" android:background="@drawable/button_style_red"
+            android:textSize="20sp" android:text="ACS" android:textColor="#FFFFFF"/>
     </LinearLayout>
 
 </RelativeLayout>
